LPS-42972 DDM form text field widths do not scale properly

--- a/portal-web/docroot/html/portlet/dynamic_data_mapping/css/main.css
+++ b/portal-web/docroot/html/portlet/dynamic_data_mapping/css/main.css
@@ -4,6 +4,10 @@
 .portlet-document-library, .portlet-dynamic-data-mapping {
 	.diagram-builder-drop-container {
 		overflow: auto;
+
+		.field-input-text, .field-textarea {
+			box-sizing: border-box;
+		}
 	}
 
 	.diagram-builder-field-icon {
