LPS-49199 'Show No Border' causes long portlet title text to overflow

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -614,6 +614,14 @@ $dockbarOpenGradientStart: #0EA6F9;
 
 	.portlet-borderless-bar {
 		@extend %portlet-action-bar-custom;
+
+		.portlet-actions {
+			@include box-shadow(inset 2px 1px 2px #000);
+		}
+
+		.portlet-title-default {
+			@include box-shadow(inset -2px 1px 2px #000);
+		}
 	}
 
 	.portlet-content, .portlet-minimized .portlet-content-container {
