--- a/portal-web/docroot/html/themes/_styled/css/portlet.css
+++ b/portal-web/docroot/html/themes/_styled/css/portlet.css
@@ -7,7 +7,7 @@
 }
 
 body.portlet {
-	border: none;
+	border-width: 0;
 }
 
 .portlet-topper {
@@ -72,9 +72,11 @@ body.portlet {
 
 .portlet-title-text {
 	display: inline-block;
+
+	@include ellipsis;
+
 	max-width: 95%;
 	overflow: hidden;
-	text-overflow: ellipsis;
 	vertical-align: top;
 	white-space: nowrap;
 }
@@ -102,7 +104,8 @@ body.portlet {
 %portlet-action-bar {
 	background: #333;
 	color: #FFF;
-	text-shadow: -1px -1px #000;
+
+	@include text-shadow(-1px -1px #000);
 
 	a {
 		color: #3AF;
@@ -197,36 +200,42 @@ body.portlet {
 }
 
 .portlet-borderless-bar {
+	background-color: transparent;
 	font-size: 10px;
 
 	@include opacity(0.3);
 
-	padding: 2px 5px 1px;
+	height: 0;
+	padding: 0;
 	position: absolute;
 	right: 0;
 	top: 0;
+
+	width: 100%;
 	z-index: 200;
 
 	a {
 		background: url() no-repeat 0 50%;
 		display: inline-block;
-		height: 16px;
+		height: 20px;
 		margin-left: 5px;
 		text-indent: -9999px;
-		vertical-align: middle;
 		width: 16px;
 	}
 
 	.portlet-actions {
-		display: none;
-		float: left;
-		margin-right: 10px;
+		float: right;
 		overflow: hidden;
+		padding: 0 5px;
+
+		.portlet-action, .portlet-options {
+			display: inline-block;
+		}
 	}
 
 	.portlet-actions, .portlet-title-default {
+		background-color: #333;
 		min-height: 20px;
-		vertical-align: top;
 	}
 
 	.portlet-action-separator {
@@ -239,8 +248,13 @@ body.portlet {
 		width: auto;
 	}
 
-	.portlet-close a {
-		background-image: url(../images/portlet/close_borderless.png);
+	.portlet-close {
+		display: inline-block;
+		vertical-align: middle;
+
+		a {
+			background-image: url(../images/portlet/close_borderless.png);
+		}
 	}
 
 	.portlet-options li.lfr-trigger strong a {
@@ -289,9 +303,17 @@ body.portlet {
 }
 
 .portlet-title-default {
-	display: inline-block;
+	display: block;
+
+	@include ellipsis;
+
 	float: right;
 	font-weight: bold;
+	height: 0;
+	line-height: 19px;
+	max-width: 50%;
+	overflow: hidden;
+	padding: 0 10px;
 	text-transform: uppercase;
 }
 
@@ -301,7 +323,7 @@ body.portlet {
 	}
 
 	.portlet-title-default {
-		background: url(../images/portlet/draggable_borderless.png) no-repeat 0 50%;
+		background: url(../images/portlet/draggable_borderless.png) no-repeat 0 50% #333;
 		cursor: move;
 		padding-left: 20px;
 	}
@@ -563,7 +585,7 @@ body.portlet {
 .restricted {
 	&, & td {
 		background: #FDD;
-		border: none;
+		border-width: 0;
 	}
 
 	* {
@@ -659,15 +681,15 @@ body.portlet {
 .taglib-calendar {
 	tr {
 		&.portlet-section-header th, & td {
-			border: none;
+			border-width: 0;
 		}
 
 		td {
 			a {
 				background-color: #F0F5F7;
 				border: 1px solid #FFF;
-				border-bottom: none;
-				border-left: none;
+				border-bottom-width: 0;
+				border-left-width: 0;
 				display: block;
 				height: 15px;
 				padding: 5px 0;
@@ -728,7 +750,7 @@ body.portlet {
 	}
 
 	.taglib-calendar tr td.first a {
-		border-right: none;
+		border-right-width: 0;
 	}
 }
 
