--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -251,9 +251,8 @@ $dockbarOpenGradientStart: #0EA6F9;
 		}
 
 		.brand {
-			padding: 0;
-			padding-right: 20px;
 			margin-left: 0;
+			padding: 0 20px 0 0;
 
 			img {
 				height: 40px;
