LPS-49052 - Source formatting

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -102,6 +102,10 @@ $dockbarOpenGradientStart: #0EA6F9;
 				}
 
 				> li {
+					&:last-child > a {
+						margin-right: 0;
+					}
+
 					> a {
 						margin: 0 5px 0 0;
 						padding: 6px 10px;
@@ -167,10 +171,6 @@ $dockbarOpenGradientStart: #0EA6F9;
 				}
 			}
 		}
-	}
-
-	.dockbar .navbar-inner .nav > li:last-child > a {
-		margin-right: 0;
 	}
 
 	.dockbar-split .dockbar {
