--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -360,8 +360,13 @@ $dockbarOpenGradientStart: #0EA6F9;
 
 	.portlet-topper-toolbar {
 		position: absolute;
-		right: 21px;
+		right: 8px;
 		top: 23px;
+	}
+
+	.portlet-topper-titleless .portlet-topper-toolbar {
+		bottom: 30px;
+		top: auto;
 	}
 
 	.nav-list {
@@ -385,8 +390,10 @@ $dockbarOpenGradientStart: #0EA6F9;
 	}
 
 	.portlet-title {
+		display: inline-block;
 		font-size: 25px;
 		font-weight: 100;
+		width: 85%;
 
 		.taglib-icon-help {
 			margin-left: -7px;
