LPS-49614 Source Formatting

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -737,7 +737,7 @@
 	.add-content-menu, .lfr-edit-layout-panel, .panel-page-menu .portlet-borderless-container {
 		.accordion {
 			background: #FFF;
-			border: 1px solid #D3D3D3;
+			border: solid #D3D3D3;
 			border-width: 0 1px;
 
 			.accordion-group {
