LPS-42972 Fix html field width scale

--- a/portal-web/docroot/html/portlet/dynamic_data_mapping/css/main.css
+++ b/portal-web/docroot/html/portlet/dynamic_data_mapping/css/main.css
@@ -5,8 +5,9 @@
 	.diagram-builder-drop-container {
 		overflow: auto;
 
-		.field-input-text, .field-textarea {
+		.field-input-text, .field-textarea, .lfr-ddm-text-html {
 			box-sizing: border-box;
+			display: block;
 		}
 	}
 
